proxy => feat: auth controller and middleware with mock auth provider
