# proxy/internal/dto/user.go
@@ -1,0 +1,10 @@
+package dto
+
+type User struct {
+	Id        int    `json:"id" db:"id"`
+	Email     string `json:"email" db:"email"`
+	Password  string `json:"password" db:"password"`
+	FirstName string `json:"firstName" db:"first_name"`
+	LastName  string `json:"lastName" db:"last_name"`
+	Age       int    `json:"age" db:"age"`
+}
